<?xml version="1.0"?>
<package format="2">
  <name>double_link_observer</name>
  <version>0.0.0</version>
  <description>
  An example package that shows how could be built in ROS
  for a simple double link manipulator.
  </description>

  <maintainer email="s.mikhel@innopolis.ru">Stanislav</maintainer>

  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
